--- a/style.css
+++ b/style.css
@@ -8,25 +8,29 @@ body {
     align-items: center;
     height: 100vh;
     color: #333;
-    padding: 0 15px; /* Add padding for smaller screens */
+    padding: 0 15px;
+    /* Add padding for smaller screens */
 }
 
 .container {
     position: relative;
-    height: 80vh;
+    max-height: 80vh;
     width: 80%;
     overflow-y: scroll;
+    overflow-x: hidden;
     text-align: center;
     background-color: #fff;
     padding: 20px;
     border-radius: 12px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
+    box-shadow: 30px 30px 50px rgba(0, 0, 0, 0.8);
+    min-width: 400px;
     box-sizing: border-box;
 }
+
 .container h1 {
     margin-top: 20px;
 }
+
 h1 {
     margin-bottom: 20px;
     font-size: 2em;
@@ -54,7 +58,9 @@ h1 {
 
 .menu {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     gap: 15px;
     margin-bottom: 20px;
 }
@@ -62,8 +68,11 @@ h1 {
 .menu button {
     text-decoration: none;
     color: white;
+    width: 50%;
+    max-width: 400px;
     background: linear-gradient(135deg, #007bff, #0056b3);
     padding: 12px 0;
+
     border: none;
     border-radius: 50px;
     transition: background-color 0.3s, transform 0.3s;
@@ -86,11 +95,13 @@ h1 {
 .lesson-menu {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 10px;
     margin-top: 20px;
 }
 
 .lesson-menu button {
+    width: fit-content;
     background-color: #3498db;
     color: white;
     padding: 10px 20px;
@@ -119,9 +130,39 @@ h1 {
 
 /* Style for images within lesson content */
 .lesson-content img {
-    max-width: 100%; /* Ensure images don't exceed container width */
-    height: auto; /* Maintain aspect ratio */
-    margin: 10px 0; /* Add margin to separate images */
+    max-width: 100%;
+    /* Ensure images don't exceed container width */
+    height: auto;
+    /* Maintain aspect ratio */
+    margin: 10px 0;
+    /* Add margin to separate images */
+}
+
+.spinner {
+    display: none;
+    /* Initially hidden */
+    position: relative;
+    /* Use absolute positioning */
+    top: 50%;
+    left: 45%;
+    border: 8px solid #f3f3f3;
+    /* Light grey */
+    border-top: 8px solid #007bff;
+    /* Blue */
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 
@@ -129,6 +170,8 @@ h1 {
 @media (max-width: 600px) {
     .container {
         padding: 15px;
+        min-width: 0;
+        width: 90%;
     }
 
     h1 {
@@ -147,5 +190,12 @@ h1 {
 
     #content {
         font-size: 0.9em;
+    }
+}
+
+@media (min-width: 700px) {
+    .menu {
+        flex-direction: row;
+
     }
 }
